tests/rosetta/out/Java/bitmap.error
javac: exit status 1
/tmp/Bitmap.java:41: error: duplicate class: Bitmap
public class Bitmap {
       ^
1 error
